--- a/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
+++ b/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
@@ -65,7 +65,7 @@
             <div class="transaction-view__content__image"></div>
             <div class="transaction-view__content__item transaction-view__content__item--inline">
               <div class="transaction-view__content__item__label">{{product.product.name}}</div>
-              <div class="transaction-view__content__item__value">{{product.amount}}</div>
+              <div class="transaction-view__content__item__value">{{product.amount.usd()}}</div>
               <md-icon>open_in_new</md-icon>
             </div>
           </div>
