--- a/src/assets/scss/_customer-view.scss
+++ b/src/assets/scss/_customer-view.scss
@@ -297,7 +297,7 @@ $card-title-color: #5B9BE1;
     }
   }
 
-  &__cc-input {
+  &__edit {
     margin-bottom: 100px;
     box-shadow: 0 3px 1px -2px rgba(0,0,0,.2),0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12);
     background: white;
@@ -441,6 +441,23 @@ $card-title-color: #5B9BE1;
     md-input {
       margin: 0;
       max-width: 240px;
+    }
+
+    .input-disabled {
+      .md-input-underline {
+        border-top: 1px solid rgba(0, 0, 0, 0.4);
+        background-image: none;
+      }
+    }
+
+    .datepicker--custom__input {
+      width: 90px;
+    }
+
+    .no-margin {
+      .md-input-wrapper {
+        margin: 0;
+      }
     }
   }
 }
