--- a/src/app/pages/customers-page/customer-view/customer-transactions/customer-transactions.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-transactions/customer-transactions.component.html
@@ -28,9 +28,10 @@
     <tr *ngFor="let entity of entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder">
       <td *ngFor="let params of columnParams" [class.cell--align-right]="params.align === 'right'" [routerLink]="['/transactions', entity.id]">{{params.mappingFunction(entity)}}</td>
       <td>
-        <table-actions
-          [service]="service">
-        </table-actions>
+        <button md-icon-button [md-menu-trigger-for]="actionsMenu"><md-icon>more_vert</md-icon></button>
+        <md-menu #actionsMenu="mdMenu" x-position="before">
+          <button md-menu-item (click)="router.navigate(['transactions',entity.id])">View Transaction</button>
+        </md-menu>
       </td>
     </tr>
     </tbody>
