--- a/src/assets/scss/_transaction-view.scss
+++ b/src/assets/scss/_transaction-view.scss
@@ -52,6 +52,10 @@ $card-title-color: #5B9BE1;
       border-bottom: 1px solid rgba(0,0,0,0.15);
       padding: 10px 50px 10px 20px;
 
+      &--no-border {
+        border-bottom: 0;
+      }
+
       &__label {
         margin-bottom: 2px;
         font-size: 12px;
@@ -59,6 +63,26 @@ $card-title-color: #5B9BE1;
 
       &__value {
         font-size: 11px;
+        color: rgba(0, 0, 0, 0.5);
+
+        &--big {
+          font-size: 14px;
+        }
+      }
+
+      md-input-container {
+        margin: 0;
+        width: 100px;
+        color: rgba(0, 0, 0, 0.5);
+
+        .md-input-wrapper {
+          margin: 0;
+        }
+      }
+
+      md-checkbox {
+        margin-left: 50px;
+        font-size: 12px;
         color: rgba(0, 0, 0, 0.5);
       }
 
@@ -80,6 +104,29 @@ $card-title-color: #5B9BE1;
         height: 18px;
         width: 18px;
         color: rgba(0,0,0,0.6);
+      }
+    }
+
+    &__refund {
+
+      &__actions {
+        display: flex;
+        padding: 10px 15px 0 15px;
+        border-top: 1px solid rgba(0,0,0,0.15);
+
+        div {
+          font-size: 12px;
+          cursor: pointer;
+
+          &:first-child {
+            margin-left: auto;
+            margin-right: 10px;
+          }
+
+          &:last-child {
+            color: $card-title-color;
+          }
+        }
       }
     }
 
