--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -132,6 +132,8 @@
                     <button md-menu-item (click)="deleteCreditCard(cc)"> Remove Credit Card </button>
                   </md-menu>
                 </div>
+
+                <div class="customer-view__no-results customer-view__no-results--credit-cards" *ngIf="!entity.creditCards || entity.creditCards.length === 0">No credit cards found</div>
               </md-card-content>
             </md-card>
 
