--- a/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
@@ -44,6 +44,9 @@
     </tbody>
   </table>
 
+  <md-spinner class="customer-view__spinner" *ngIf="loadingData && (!entities || entities.length === 0)"></md-spinner>
+  <div *ngIf="!loadingData && (!entities || entities.length === 0)" class="customer-view__no-results customer-view__no-results--table">No upcoming transactions found</div>
+
   <table-pagination
     *ngIf="!homepageMode"
     [limit]="limit"
