Enable links in customer events

--- a/src/app/pages/customers-page/customer-view/customer-events/customer-events.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-events/customer-events.component.html
@@ -17,7 +17,7 @@
         </div>
         <div class="events__content">
           <div><img src="assets/images/alert-icon.svg"></div>
-          <span>{{activity.parse()}}</span>
+          <single-event [data]="activity.parse()"></single-event>
         </div>
       </div>
 
