Fix share link url

--- a/src/app/shared/components/share-link/share-link.component.scss
+++ b/src/app/shared/components/share-link/share-link.component.scss
@@ -37,6 +37,7 @@
     display: flex;
     align-items: center;
     padding: 10px 0;
+    font-size: 12px;
 
     &__content {
       display: inline-block;
