--- a/src/assets/scss/_customer-view.scss
+++ b/src/assets/scss/_customer-view.scss
@@ -495,8 +495,14 @@ $card-title-color: #5B9BE1;
     padding: 15px 13px 15px 18px;
     font-size: 12px;
 
-    &__number {
+    &__column {
+      display: flex;
+      flex-direction: column;
       margin-left: 10px;
+
+      span:first-of-type {
+        margin-bottom: 4px;
+      }
     }
 
     &__expiration {
